--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,16 @@
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
 }
-
+ul li {
+  list-style: none;
+}
+h1 {
+    font-size: 2em;
+}
 .logo {
   height: 6em;
   padding: 1.5em;
