--- a/src/common.css
+++ b/src/common.css
@@ -11,10 +11,16 @@
 .container {
     max-width: 1280px;
     margin: 0 auto;
-    padding: 2rem;
+
     display: flex;
     flex-direction: column;
     width: 100%;
+}
+button {
+    line-height: 35px;
+}
+.form-actions > button {
+    margin: 10px 10px;
 }
 .form-control {
     display: flex;
