--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ h1 {
 }
 .sidebar-container {
   display: flex;
-    justify-content: space-between;
+  justify-content: space-between;
 }
 .logo {
   height: 6em;
@@ -27,9 +27,10 @@ h1 {
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
+
 .user-nav {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr auto;
   grid-gap: 15px;
   justify-content: space-between;
 }
@@ -47,13 +48,6 @@ h1 {
     transform: rotate(360deg);
   }
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
 .card {
   padding: 2em;
 }
@@ -70,4 +64,33 @@ h1 {
 }
 main {
   width: 100%;
+}
+.product-view {
+  display: flex;
+  justify-content: space-between;
+}
+.photo-gallery {
+  max-width: 50% ;
+}
+.cart-item {
+  display: grid;
+  grid-template-columns: 30% 30% 20% 1fr;
+}
+.remove-btn {
+  background: red;
+}
+.product-description {
+  padding: 20px;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  a:nth-of-type(2) .logo {
+    animation: logo-spin infinite 20s linear;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .product-view {
+    flex-direction: column;
+  }
 }
