--- a/src/common.css
+++ b/src/common.css
@@ -1,6 +1,5 @@
 .flex {
     display: flex;
-
 }
 .flex-column {
     flex-direction: column;
@@ -59,4 +58,8 @@ button {
 .space-between {
     display: flex;
     justify-content: space-between;
+}
+.flex-column {
+    display: flex;
+    flex-direction: column;
 }
