--- a/src/common.css
+++ b/src/common.css
@@ -14,6 +14,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    justify-content: flex-start;
 }
 button {
     line-height: 35px;
