--- a/src/components/ProductPreview.module.css
+++ b/src/components/ProductPreview.module.css
@@ -1,6 +1,8 @@
 
 .product {
-    background-color: lightblue;
+    background-color: #eceff3;
     padding: 10px;
     text-align: left;
+    margin: 10px;
+    border-radius: 5px;
 }
