--- a/src/App.css
+++ b/src/App.css
@@ -98,6 +98,10 @@ main {
   padding: 20px;
 }
 
+.task-item:nth-child(odd) {
+  background: #f4f4f4;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   a:nth-of-type(2) .logo {
     animation: logo-spin infinite 20s linear;
