--- a/src/App.css
+++ b/src/App.css
@@ -106,7 +106,13 @@ main {
 .task-item:nth-child(odd) {
   background: #f4f4f4;
 }
-
+.tagging {
+  display: flex;
+  list-style: none;
+  li {
+    padding: 10px;
+  }
+}
 
 @media (prefers-reduced-motion: no-preference) {
   a:nth-of-type(2) .logo {
